#699[web-app] | search API changes to pass the custom fields in case configured for a subject type